ensure adequate color contrast for purple color

--- a/src/components/css/base.css
+++ b/src/components/css/base.css
@@ -32,7 +32,7 @@
     --primary: #e4e4e4;
     --primary-lighter: #c5c5c5;
     --primary-contrast: #111111;
-    --secondary: #b96aff;
+    --secondary: #9757cf;
     --tertiary: #ff8a2b;
     --complementary: #02a768;
   }
